<resources>
    <string name="app_name">FinalAplication</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>

    <string name="calculadora">Calculadora</string>

    <string name="bt_7">7</string>
    <string name="bt_8">8</string>
    <string name="bt_9">9</string>
    <string name="bt_6">6</string>
    <string name="bt_5">5</string>
    <string name="bt_4">4</string>
    <string name="bt_3">3</string>
    <string name="bt_2">2</string>
    <string name="bt_1">1</string>
    <string name="bt_0">0</string>
    <string name="bt_soma">+</string>
    <string name="bt_div">/</string>
    <string name="bt_sub">-</string>
    <string name="bt_mul">*</string>
    <string name="bt_apagar">p</string>
    <string name="bt_igual">=</string>
    <string name="bt_ponto">.</string>
    <string name="bt_vir">,</string>


    <string name="login">login</string>
    <string name="simulador">Simulador</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="registrar">Registrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="r_senha">r_senha</string>
    <string name="nome">nome</string>
    <string name="cadastro">Cadastro</string>
    <string name="c">C</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ast">*</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="ligar">#</string>
    <string name="bligar">ligar</string>
    <string name="textview">TextView</string>

    <string name="nome_perfil">Nome</string>
    <string name="email_perfil">E-mail</string>
    <string name="idade_perfil">Idade</string>


    <string name="txt_calcular">Calcular Média</string>
    <string name="txt_nota1">Nota1</string>
    <string name="txt_nota2">Nota2</string>
    <string name="txt_nota3">Nota3</string>
    <string name="txt_nota4">Nota4</string>
    <string name="txt_resultado">Resultado =</string>


</resources>
